<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InstructionActivity" 
    android:background="@drawable/instruction_background">
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
        android:background="#80ffffff">
     <TextView
        android:id="@+id/instruction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_title"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:textColor="#353C56"
        />
    <TextView
        android:id="@+id/instruction_word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_word1"
        android:textSize="18sp" 
        android:layout_marginTop="10dp"
        android:textColor="#353C56"
        android:layout_below="@+id/instruction_title"/>
     <TextView
        android:id="@+id/instruction_word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_word2"
        android:textSize="18sp" 
        android:layout_marginTop="10dp"
        android:textColor="#353C56"
        android:layout_below="@+id/instruction_word1"/>
      <TextView
        android:id="@+id/instruction_word3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_word3"
        android:textSize="18sp" 
        android:layout_marginTop="10dp"
        android:textColor="#353C56"
        android:layout_below="@+id/instruction_word2"/>
       <TextView
        android:id="@+id/instruction_word4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_word4"
        android:textSize="18sp" 
        android:layout_marginTop="10dp"
        android:textColor="#353C56"
        android:layout_below="@+id/instruction_word3"/>
        <TextView
        android:id="@+id/instruction_word5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_word5"
        android:textSize="18sp" 
        android:layout_marginTop="10dp"
        android:textColor="#353C56"
        android:layout_below="@+id/instruction_word4"/>
         <TextView
        android:id="@+id/instruction_word6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_word6"
        android:textSize="18sp" 
        android:layout_marginTop="10dp"
        android:textColor="#353C56"
        android:layout_below="@+id/instruction_word5"/>
</RelativeLayout>
</RelativeLayout>
